[gd_scene load_steps=7 format=2]

[ext_resource path="res://BigShip.tscn" type="PackedScene" id=1]
[ext_resource path="res://SupportShip.gd" type="Script" id=2]
[ext_resource path="res://assets/cone.tres" type="Shape" id=3]
[ext_resource path="res://assets/cone.dae" type="PackedScene" id=4]

[sub_resource type="PrismMesh" id=1]
size = Vector3( 100, 250, 50 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.792157, 1, 0.705882, 0.196078 )

[node name="SupportShip" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="HealthSystem" parent="." index="0"]
MAX_SHIELD = 10000
time_before_shield_repair = 30.0
shield_repair_per_sec = 500.0
MAX_HEALTH = 25000

[node name="Mesh" parent="." index="1"]
mesh = SubResource( 1 )

[node name="ShieldMesh" parent="." index="2"]
mesh = SubResource( 1 )

[node name="CollisionShape" parent="." index="3"]
transform = Transform( -0.5, 4.37114e-08, 1.91069e-15, 0, -2.18557e-08, 0.5, 4.37114e-08, 0.5, 2.18557e-08, 0, 0, 0 )

[node name="Turret" parent="Turrets" index="0"]
transform = Transform( 0.977802, 0, -0.209533, 0, 1, 0, 0.209533, 0, 0.977802, 72.2043, 0, -11.4604 )

[node name="Turret3" parent="Turrets" index="1"]
transform = Transform( 0.978807, 0, -0.204786, 0, 1, 0, 0.204786, 0, 0.978807, -10.4908, 0, -27.8143 )

[node name="Turret4" parent="Turrets" index="2"]
transform = Transform( 0.978807, 0, -0.204786, 0, 1, 0, 0.204786, 0, 0.978807, -97.5944, 0, -44.9734 )

[node name="Turret5" parent="Turrets" index="3"]
transform = Transform( -0.950065, 0, -0.312053, 0, 1, 0, 0.312053, 0, -0.950065, -92.0471, 0, 41.4847 )

[node name="Turret6" parent="Turrets" index="4"]
transform = Transform( -0.950065, 0, -0.312053, 0, 1, 0, 0.312053, 0, -0.950065, -11.708, 0, 26.9843 )

[node name="Turret2" parent="Turrets" index="5"]
transform = Transform( -0.982336, 0, -0.187124, 0, 1, 0, 0.187124, 0, -0.982336, 73.4653, 0, 11.0799 )

[node name="Turret7" parent="Turrets" index="6"]
transform = Transform( -0.00408395, 0, -0.999992, 0, 1, 0, 0.999992, 0, -0.00408395, 123.398, 0, 0.200912 )

[node name="SupportArea" type="Area" parent="." index="7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -88.054, 0 )

[node name="cone" parent="SupportArea" index="0" instance=ExtResource( 4 )]
transform = Transform( 100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0 )

[node name="Cone" parent="SupportArea/cone" index="0"]
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="SupportArea" index="1"]
transform = Transform( 100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0 )
shape = ExtResource( 3 )

[connection signal="body_entered" from="SupportArea" to="." method="_on_SupportArea_body_entered"]
[connection signal="body_exited" from="SupportArea" to="." method="_on_SupportArea_body_exited"]

[editable path="SupportArea/cone"]
